Adding container link functionality

--- a/wp-content/plugins/crown-blocks/src/block-container/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-container/style.scss
@@ -113,4 +113,13 @@ $spacer: 1rem;
 		}
 	}
 
+	> .container-link {
+		position: absolute;
+		left: 0;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		display: block;
+	}
+
 }
