--- a/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
@@ -18873,8 +18873,8 @@ nav.pagination {
       margin-right: -1.5rem; } }
   @media (min-width: 948px) {
     .wp-block-crown-blocks-container.alignfull {
-      margin-left: calc((100vw - 900px) / -2);
-      margin-right: calc((100vw - 900px) / -2); } }
+      margin-left: calc(((var(--ct-vw, 1vw) * 100) - 900px) / -2);
+      margin-right: calc(((var(--ct-vw, 1vw) * 100) - 900px) / -2); } }
   .wp-block-crown-blocks-container.alignfull > .inner > .container-contents {
     padding-left: 1rem;
     padding-right: 1rem;
@@ -18945,8 +18945,8 @@ nav.pagination {
       margin-right: -1.5rem; } }
   @media (min-width: 948px) {
     .wp-block-crown-blocks-section-nav.alignfull {
-      margin-left: calc((100vw - 900px) / -2);
-      margin-right: calc((100vw - 900px) / -2); } }
+      margin-left: calc(((var(--ct-vw, 1vw) * 100) - 900px) / -2);
+      margin-right: calc(((var(--ct-vw, 1vw) * 100) - 900px) / -2); } }
 
 .wp-block-crown-blocks-section-nav .section-nav-title {
   display: none; }
@@ -21580,8 +21580,8 @@ nav.pagination {
       margin-right: -1.5rem; } }
   @media (min-width: 948px) {
     .wp-block-crown-blocks-post-header {
-      margin-left: calc((100vw - 900px) / -2);
-      margin-right: calc((100vw - 900px) / -2); } }
+      margin-left: calc(((var(--ct-vw, 1vw) * 100) - 900px) / -2);
+      margin-right: calc(((var(--ct-vw, 1vw) * 100) - 900px) / -2); } }
   .wp-block-crown-blocks-post-header > .header-bg {
     background-color: #032040; }
   .wp-block-crown-blocks-post-header > .inner > .header-contents {
@@ -21647,8 +21647,8 @@ nav.pagination {
       margin-right: -1.5rem; } }
   @media (min-width: 948px) {
     .wp-block-crown-blocks-resource-header {
-      margin-left: calc((100vw - 900px) / -2);
-      margin-right: calc((100vw - 900px) / -2); } }
+      margin-left: calc(((var(--ct-vw, 1vw) * 100) - 900px) / -2);
+      margin-right: calc(((var(--ct-vw, 1vw) * 100) - 900px) / -2); } }
   .wp-block-crown-blocks-resource-header.text-color-light {
     color: #fff; }
     .wp-block-crown-blocks-resource-header.text-color-light .entry-breadcrumbs .crumb:first-child a:before {
@@ -21787,8 +21787,8 @@ nav.pagination {
       margin-right: -1.5rem; } }
   @media (min-width: 948px) {
     .wp-block-crown-blocks-event-header {
-      margin-left: calc((100vw - 900px) / -2);
-      margin-right: calc((100vw - 900px) / -2); } }
+      margin-left: calc(((var(--ct-vw, 1vw) * 100) - 900px) / -2);
+      margin-right: calc(((var(--ct-vw, 1vw) * 100) - 900px) / -2); } }
   .wp-block-crown-blocks-event-header > .header-bg {
     background-color: #032040;
     background: -webkit-gradient(linear, right top, left bottom, from(#032040), to(#D11141));
@@ -21899,8 +21899,8 @@ nav.pagination {
       margin-right: -1.5rem; } }
   @media (min-width: 948px) {
     .wp-block-crown-blocks-client-story-header {
-      margin-left: calc((100vw - 900px) / -2);
-      margin-right: calc((100vw - 900px) / -2); } }
+      margin-left: calc(((var(--ct-vw, 1vw) * 100) - 900px) / -2);
+      margin-right: calc(((var(--ct-vw, 1vw) * 100) - 900px) / -2); } }
   .wp-block-crown-blocks-client-story-header > .header-bg {
     background-color: #032040; }
   .wp-block-crown-blocks-client-story-header > .inner > .header-contents {
