--- a/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
@@ -149,7 +149,7 @@ $h5-font-size:                1.5rem !default;
 $h6-font-size:                1.25rem !default;
 
 $headings-margin-bottom:      1rem !default;
-$headings-font-family:        $font-family-sans-serif !default;
+$headings-font-family:        $font-family-sans-serif-alt !default;
 $headings-font-weight:        $font-weight-bold !default;
 $headings-line-height:        1.2 !default;
 $headings-color:              null !default;
