--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -16495,6 +16495,102 @@ label {
   font-size: 1rem;
   line-height: 1.2; }
 
+/*	Datepicker
+---------------------------------------------------------*/
+.ui-datepicker {
+  display: none;
+  background-color: #fff;
+  width: 250px;
+  border: 1px solid #888;
+  border-radius: 0;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  font-size: 1.25rem;
+  line-height: 1.4;
+  overflow: hidden;
+  margin-top: 4px; }
+  .ui-datepicker .ui-datepicker-header {
+    position: relative;
+    height: 50px;
+    text-align: center; }
+  .ui-datepicker .ui-datepicker-prev,
+  .ui-datepicker .ui-datepicker-next {
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 50px;
+    cursor: pointer;
+    width: 30px;
+    height: 50px;
+    text-align: center; }
+    .ui-datepicker .ui-datepicker-prev:before,
+    .ui-datepicker .ui-datepicker-next:before {
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      display: inline-block;
+      font-style: normal;
+      font-variant: normal;
+      font-weight: normal;
+      line-height: 1;
+      font-family: "icomoon";
+      content: ""; }
+    .ui-datepicker .ui-datepicker-prev span,
+    .ui-datepicker .ui-datepicker-next span {
+      display: none; }
+  .ui-datepicker .ui-datepicker-prev {
+    left: 0; }
+    .ui-datepicker .ui-datepicker-prev:before {
+      content: "";
+      -webkit-transform: rotate(180deg);
+          -ms-transform: rotate(180deg);
+              transform: rotate(180deg); }
+  .ui-datepicker .ui-datepicker-next {
+    right: 0; }
+    .ui-datepicker .ui-datepicker-next:before {
+      content: ""; }
+  .ui-datepicker .ui-datepicker-title {
+    padding-top: 8px;
+    line-height: 26px; }
+    .ui-datepicker .ui-datepicker-title select {
+      height: calc(1.2em + 0.8rem + 2px);
+      padding: 0.4rem 0.6rem;
+      font-size: 0.75rem;
+      line-height: 1.2;
+      border-radius: 0;
+      display: inline-block;
+      width: 90px;
+      margin-left: 2px; }
+      .ui-datepicker .ui-datepicker-title select:first-child {
+        margin-left: 0; }
+  .ui-datepicker table.ui-datepicker-calendar {
+    margin: 0; }
+    .ui-datepicker table.ui-datepicker-calendar > thead > tr > th {
+      font-weight: 300;
+      text-transform: uppercase;
+      color: #aaa;
+      font-size: 10px;
+      border-bottom: 1px solid #eee;
+      padding: 6px 8px 4px;
+      line-height: 1.2; }
+    .ui-datepicker table.ui-datepicker-calendar > tbody > tr > td {
+      border-top: none;
+      padding: 0;
+      line-height: 1.2; }
+      .ui-datepicker table.ui-datepicker-calendar > tbody > tr > td > span,
+      .ui-datepicker table.ui-datepicker-calendar > tbody > tr > td > a {
+        display: block;
+        padding: 6px 8px;
+        -webkit-transition: background-color 0.15s linear, color 0.15s linear;
+        transition: background-color 0.15s linear, color 0.15s linear; }
+        .ui-datepicker table.ui-datepicker-calendar > tbody > tr > td > span.ui-state-active,
+        .ui-datepicker table.ui-datepicker-calendar > tbody > tr > td > a.ui-state-active {
+          background-color: #0381C3;
+          color: #fff; }
+      .ui-datepicker table.ui-datepicker-calendar > tbody > tr > td > a:hover {
+        background-color: tint(#0381C3, 90%); }
+    .ui-datepicker table.ui-datepicker-calendar th, .ui-datepicker table.ui-datepicker-calendar td {
+      text-align: center; }
+
 form.feed-filters {
   margin: 0 -.5rem 2rem;
   padding: 1rem .5rem;
