--- a/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
@@ -340,7 +340,7 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 1rem;
-  font-family: "proxima-nova", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "semplicitapro", proxima-nova, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   font-weight: 700;
   line-height: 1.2; }
 
@@ -15875,6 +15875,102 @@ label {
   font-size: 1rem;
   line-height: 1.2; }
 
+/*	Datepicker
+---------------------------------------------------------*/
+.ui-datepicker {
+  display: none;
+  background-color: #fff;
+  width: 250px;
+  border: 1px solid #888;
+  border-radius: 0;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  font-size: 1.25rem;
+  line-height: 1.4;
+  overflow: hidden;
+  margin-top: 4px; }
+  .ui-datepicker .ui-datepicker-header {
+    position: relative;
+    height: 50px;
+    text-align: center; }
+  .ui-datepicker .ui-datepicker-prev,
+  .ui-datepicker .ui-datepicker-next {
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 50px;
+    cursor: pointer;
+    width: 30px;
+    height: 50px;
+    text-align: center; }
+    .ui-datepicker .ui-datepicker-prev:before,
+    .ui-datepicker .ui-datepicker-next:before {
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      display: inline-block;
+      font-style: normal;
+      font-variant: normal;
+      font-weight: normal;
+      line-height: 1;
+      font-family: "icomoon";
+      content: ""; }
+    .ui-datepicker .ui-datepicker-prev span,
+    .ui-datepicker .ui-datepicker-next span {
+      display: none; }
+  .ui-datepicker .ui-datepicker-prev {
+    left: 0; }
+    .ui-datepicker .ui-datepicker-prev:before {
+      content: "";
+      -webkit-transform: rotate(180deg);
+          -ms-transform: rotate(180deg);
+              transform: rotate(180deg); }
+  .ui-datepicker .ui-datepicker-next {
+    right: 0; }
+    .ui-datepicker .ui-datepicker-next:before {
+      content: ""; }
+  .ui-datepicker .ui-datepicker-title {
+    padding-top: 8px;
+    line-height: 26px; }
+    .ui-datepicker .ui-datepicker-title select {
+      height: calc(1.2em + 0.8rem + 2px);
+      padding: 0.4rem 0.6rem;
+      font-size: 0.75rem;
+      line-height: 1.2;
+      border-radius: 0;
+      display: inline-block;
+      width: 90px;
+      margin-left: 2px; }
+      .ui-datepicker .ui-datepicker-title select:first-child {
+        margin-left: 0; }
+  .ui-datepicker table.ui-datepicker-calendar {
+    margin: 0; }
+    .ui-datepicker table.ui-datepicker-calendar > thead > tr > th {
+      font-weight: 300;
+      text-transform: uppercase;
+      color: #aaa;
+      font-size: 10px;
+      border-bottom: 1px solid #eee;
+      padding: 6px 8px 4px;
+      line-height: 1.2; }
+    .ui-datepicker table.ui-datepicker-calendar > tbody > tr > td {
+      border-top: none;
+      padding: 0;
+      line-height: 1.2; }
+      .ui-datepicker table.ui-datepicker-calendar > tbody > tr > td > span,
+      .ui-datepicker table.ui-datepicker-calendar > tbody > tr > td > a {
+        display: block;
+        padding: 6px 8px;
+        -webkit-transition: background-color 0.15s linear, color 0.15s linear;
+        transition: background-color 0.15s linear, color 0.15s linear; }
+        .ui-datepicker table.ui-datepicker-calendar > tbody > tr > td > span.ui-state-active,
+        .ui-datepicker table.ui-datepicker-calendar > tbody > tr > td > a.ui-state-active {
+          background-color: #0381C3;
+          color: #fff; }
+      .ui-datepicker table.ui-datepicker-calendar > tbody > tr > td > a:hover {
+        background-color: tint(#0381C3, 90%); }
+    .ui-datepicker table.ui-datepicker-calendar th, .ui-datepicker table.ui-datepicker-calendar td {
+      text-align: center; }
+
 form.feed-filters {
   margin: 0 -.5rem 2rem;
   padding: 1rem .5rem;
@@ -22356,6 +22452,113 @@ nav.pagination {
     .wp-block-crown-blocks-faq-index-single .related-entries .menu-item a:hover {
       color: #0381C3; }
 
+/*	Hover Container
+---------------------------------------------------------*/
+.wp-block-crown-blocks-hover-container:hover .content,
+.wp-block-crown-blocks-hover-container:hover .cta-label {
+  right: 0;
+  opacity: 1;
+  -webkit-transition: opacity .2s .2s, right .2s .2s ease-out;
+  transition: opacity .2s .2s, right .2s .2s ease-out; }
+
+.wp-block-crown-blocks-hover-container > .inner > .container-contents > .inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+
+.wp-block-crown-blocks-hover-container .title {
+  font-family: "proxima-nova", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
+
+.wp-block-crown-blocks-hover-container .details {
+  -webkit-transition: height .2s ease-out;
+  transition: height .2s ease-out; }
+  @media (min-width: 992px) {
+    .wp-block-crown-blocks-hover-container .details {
+      overflow: hidden;
+      height: 0; } }
+  @media (max-width: 991.98px) {
+    .wp-block-crown-blocks-hover-container .details {
+      height: auto !important; } }
+  .wp-block-crown-blocks-hover-container .details > .inner {
+    padding-top: 1rem; }
+
+.wp-block-crown-blocks-hover-container .content {
+  -webkit-transition: opacity .2s;
+  transition: opacity .2s; }
+  @media (min-width: 992px) {
+    .wp-block-crown-blocks-hover-container .content {
+      opacity: 0; } }
+
+.wp-block-crown-blocks-hover-container .cta-label {
+  -webkit-transition: opacity .2s, right .2s 0s ease-out;
+  transition: opacity .2s, right .2s 0s ease-out;
+  position: relative; }
+  @media (min-width: 992px) {
+    .wp-block-crown-blocks-hover-container .cta-label {
+      right: 1em;
+      opacity: 0; } }
+  .wp-block-crown-blocks-hover-container .cta-label:after {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: normal;
+    line-height: 1;
+    font-family: icomoon;
+    content: "";
+    position: relative;
+    margin-left: .5em;
+    margin-right: -.5em;
+    top: .15em;
+    right: 0; }
+
+.wp-block-crown-blocks-hover-container.hover-type-left-aligned:hover .details:after {
+  left: calc(100% - 1.5rem); }
+
+.wp-block-crown-blocks-hover-container.hover-type-left-aligned > .inner > .container-contents > .inner {
+  min-height: 0 !important; }
+
+.wp-block-crown-blocks-hover-container.hover-type-left-aligned .details {
+  overflow: visible;
+  height: auto !important;
+  padding-bottom: 3rem;
+  position: relative; }
+  .wp-block-crown-blocks-hover-container.hover-type-left-aligned .details:after {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: normal;
+    line-height: 1;
+    font-family: icomoon;
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    font-size: 1.5rem;
+    line-height: 1;
+    -webkit-transition: left .4s ease-out;
+    transition: left .4s ease-out; }
+
+.wp-block-crown-blocks-hover-container.hover-type-left-aligned .content {
+  -webkit-transition: opacity .4s, -webkit-transform .4s ease-out;
+  transition: opacity .4s, -webkit-transform .4s ease-out;
+  transition: opacity .4s, transform .4s ease-out;
+  transition: opacity .4s, transform .4s ease-out, -webkit-transform .4s ease-out; }
+
+.wp-block-crown-blocks-hover-container.hover-type-left-aligned .cta-label {
+  right: 0;
+  opacity: 1; }
+
 .gform_wrapper {
   margin-bottom: 1rem;
   text-align: left; }
@@ -22855,7 +23058,7 @@ body {
     padding: 1rem !important; }
 
 .editor-post-title__input {
-  font-family: "proxima-nova", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "semplicitapro", proxima-nova, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   text-align: center; }
 
 .components-button {
@@ -23163,3 +23366,19 @@ body {
   .wp-block[data-type="crown-blocks/resource-header"] .wp-block-crown-blocks-resource-header {
     margin-left: 0;
     margin-right: 0; }
+
+.wp-block[data-type="crown-blocks/hover-container"] .wp-block-crown-blocks-hover-container .details {
+  height: auto;
+  overflow: visible; }
+
+.wp-block[data-type="crown-blocks/hover-container"] .wp-block-crown-blocks-hover-container .content {
+  opacity: 1; }
+
+.wp-block[data-type="crown-blocks/hover-container"] .wp-block-crown-blocks-hover-container .cta-label {
+  opacity: 1;
+  right: 0; }
+
+.wp-block[data-type="crown-blocks/hover-container"] .wp-block-crown-blocks-hover-container.hover-type-left-aligned .content {
+  -webkit-transform: none;
+      -ms-transform: none;
+          transform: none; }
