--- a/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
@@ -191,6 +191,39 @@ $gform-gutter-width: 10px;
 		}
 	}
 
+	&.field_description_above {
+		.gfield_description {
+			margin: 0 0 5px;
+			&.validation_message {
+				margin-top: 5px;
+				margin-bottom: 10px;
+			}
+		}
+	}
+
+	&.signature {
+		.ginput_container_text {
+			position: relative;
+			&:before {
+				content: '×';
+				position: absolute;
+				line-height: 1;
+				font-size: 2rem;
+				left: 0;
+				bottom: .4rem;
+				font-weight: 300;
+				opacity: .5;
+			}
+			input[type="text"] {
+				padding: .5rem 0;
+				padding-left: 1.5rem;
+				height: auto;
+				font-family: Brush Script MT, Brush Script Std, cursive;
+				font-size: 2rem;
+			}
+		}
+	}
+
 }
 
 .gfield_required {
