--- a/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
@@ -201,6 +201,112 @@ $gform-gutter-width: 10px;
 		}
 	}
 
+	&.toggle {
+		@include media-breakpoint-up(lg) {
+			display: flex;
+			flex-wrap: wrap;
+			align-items: center;
+		}
+		&.hidden_label {
+			.gfield_label {
+				display: none;
+			}
+			.ginput_container_radio {
+				flex: 1 1 auto;
+			}
+		}
+		.gfield_label {
+			text-align: center;
+			font-size: 1.5rem;
+			font-weight: 400;
+			display: block;
+			margin-bottom: 1rem;
+			@include media-breakpoint-up(lg) {
+				flex: 1 1 auto;
+				margin-right: 1rem;
+				margin-bottom: 0;
+				text-align: left;
+			}
+		}
+		.gfield_radio {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			li {
+				margin: 0;
+				padding: 0;
+				position: relative;
+				&:first-child {
+					padding-right: 4rem;
+					&:before {
+						content: '';
+						display: block;
+						position: absolute;
+						width: 3rem;
+						height: 1.5rem;
+						border-radius: 100rem;
+						border: 1px solid $primary;
+						right: calc(.5rem - 1px);
+					}
+					input[type=radio] {
+						right: calc(.5rem - 1px + 1.5rem);
+					}
+					label {
+						text-align: right;
+						&:before {
+							right: calc(.5rem - 1px + 1.5rem + 3px);
+						}
+					}
+				}
+				input[type=radio] {
+					position: absolute;
+					right: calc(100% + .5rem - 1px);
+					width: 1.5rem;
+					height: 1.5rem;
+					top: 50%;
+					margin-top: -0.75rem;
+					opacity: .0;
+					z-index: 2;
+					cursor: pointer;
+					&:checked + label {
+						opacity: 1;
+						&:before {
+							opacity: 1;
+						}
+					}
+				}
+				label {
+					font-size: 1.25rem;
+					opacity: .6;
+					transition: opacity .2s;
+					cursor: pointer;
+					&:hover {
+						opacity: 1;
+					}
+					&:before {
+						content: '';
+						position: absolute;
+						right: calc(100% + .5rem - 1px + 3px);
+						width: calc(1.5rem - 6px);
+						height: calc(1.5rem - 6px);
+						top: 50%;
+						margin-top: calc(-0.75rem + 3px);
+						background-color: $blue;
+						opacity: 0;
+						transition: opacity .2s;
+						border-radius: 100rem;
+						border: 3px solid transparent;
+					}
+				}
+			}
+		}
+		.gfield_description {
+			margin-top: 0.5rem;
+			text-align: center;
+			width: 100%;
+		}
+	}
+
 	&.signature {
 		.ginput_container_text {
 			position: relative;
