--- a/wp-content/themes/norcal-sbdc/assets/src/scss/site/_footer.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/site/_footer.scss
@@ -422,6 +422,29 @@ body {
 }
 
 
+/*	Translate
+---------------------------------------------------------*/
+
+#google-translate {
+	position: relative;
+	overflow: hidden;
+	height: 48px;
+	margin-top: 2rem;
+	> * {
+		margin-left: -100vw;
+	}
+	select {
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		margin: 0;
+		font-family: $font-family-sans-serif;
+		font-size: $input-btn-font-size;
+	}
+}
+
+
 /*	Footer CTA Links
 ---------------------------------------------------------*/
 
