--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -24762,7 +24762,14 @@ body {
           -ms-flex: 0 0 auto;
               flex: 0 0 auto;
       text-align: center;
-      margin-top: 3rem; } }
+      margin-top: 3rem;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column; } }
 
 #footer .social-links h4 {
   margin-bottom: 1.5rem;
@@ -24789,6 +24796,32 @@ body {
     height: 3rem;
     fill: rgba(91, 109, 128, 0.5); }
 
+/*	Footer CTA Links
+---------------------------------------------------------*/
+#footer-primary-cta-links {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto; }
+  #footer-primary-cta-links ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    margin-top: 2rem; }
+    @media (min-width: 992px) {
+      #footer-primary-cta-links ul {
+        margin-top: 3rem; } }
+  #footer-primary-cta-links li {
+    margin-top: .5rem; }
+  #footer-primary-cta-links a {
+    display: block;
+    width: 100%; }
+    @media (min-width: 992px) {
+      #footer-primary-cta-links a {
+        padding: 1.25rem 2.25rem;
+        font-size: 1.5rem;
+        line-height: 1.2;
+        border-radius: 0; } }
+
 /*	Translate
 ---------------------------------------------------------*/
 #google-translate {
@@ -24806,30 +24839,6 @@ body {
     margin: 0;
     font-family: "proxima-nova", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-size: 1rem; }
-
-/*	Footer CTA Links
----------------------------------------------------------*/
-#footer-primary-cta-links ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  margin-top: 2rem; }
-  @media (min-width: 992px) {
-    #footer-primary-cta-links ul {
-      margin-top: 3rem; } }
-
-#footer-primary-cta-links li {
-  margin-top: .5rem; }
-
-#footer-primary-cta-links a {
-  display: block;
-  width: 100%; }
-  @media (min-width: 992px) {
-    #footer-primary-cta-links a {
-      padding: 1.25rem 2.25rem;
-      font-size: 1.5rem;
-      line-height: 1.2;
-      border-radius: 0; } }
 
 /*	Site Footer Meta
 ---------------------------------------------------------*/
