--- a/wp-content/themes/norcal-sbdc/assets/src/scss/site/_footer.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/site/_footer.scss
@@ -389,6 +389,8 @@ body {
 		flex: 0 0 auto;
 		text-align: center;
 		margin-top: 3rem;
+		display: flex;
+		flex-direction: column;
 	}
 }
 #footer .social-links {
@@ -422,33 +424,11 @@ body {
 }
 
 
-/*	Translate
----------------------------------------------------------*/
-
-#google-translate {
-	position: relative;
-	overflow: hidden;
-	height: 48px;
-	margin-top: 2rem;
-	> * {
-		margin-left: -100vw;
-	}
-	select {
-		position: absolute;
-		left: 0;
-		top: 0;
-		width: 100%;
-		margin: 0;
-		font-family: $font-family-sans-serif;
-		font-size: $input-btn-font-size;
-	}
-}
-
-
 /*	Footer CTA Links
 ---------------------------------------------------------*/
 
 #footer-primary-cta-links {
+	flex: 1 1 auto;
 	ul {
 		list-style: none;
 		margin: 0;
@@ -469,6 +449,29 @@ body {
 		@include media-breakpoint-up(lg) {
 			@include make-button-size(lg);
 		}
+	}
+}
+
+
+/*	Translate
+---------------------------------------------------------*/
+
+#google-translate {
+	position: relative;
+	overflow: hidden;
+	height: 48px;
+	margin-top: 2rem;
+	> * {
+		margin-left: -100vw;
+	}
+	select {
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		margin: 0;
+		font-family: $font-family-sans-serif;
+		font-size: $input-btn-font-size;
 	}
 }
 
