--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -23669,7 +23669,7 @@ nav.pagination {
       margin-right: 2rem; } }
 
 #site-logo {
-  width: 80px;
+  width: 100%;
   height: 48px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -23680,14 +23680,13 @@ nav.pagination {
   -webkit-transition: opacity .2s, visibility 0s, -webkit-transform .2s ease-out;
   transition: opacity .2s, visibility 0s, -webkit-transform .2s ease-out;
   transition: opacity .2s, visibility 0s, transform .2s ease-out;
-  transition: opacity .2s, visibility 0s, transform .2s ease-out, -webkit-transform .2s ease-out; }
+  transition: opacity .2s, visibility 0s, transform .2s ease-out, -webkit-transform .2s ease-out;
+  position: relative; }
   @media (min-width: 768px) {
     #site-logo {
-      width: 100px;
       height: 60px; } }
   @media (min-width: 992px) {
     #site-logo {
-      width: 150px;
       height: 90px; } }
   #header.is-sticky #site-logo {
     opacity: 0;
@@ -23699,35 +23698,29 @@ nav.pagination {
     transition: opacity .2s, visibility 0s .2s, -webkit-transform .2s ease-out;
     transition: opacity .2s, visibility 0s .2s, transform .2s ease-out;
     transition: opacity .2s, visibility 0s .2s, transform .2s ease-out, -webkit-transform .2s ease-out; }
-  #site-logo a {
+  #site-logo a img {
+    position: absolute;
     display: block;
-    position: relative;
-    width: 100%;
+    left: 0;
+    top: 0;
+    max-width: 100%;
     height: 100%;
-    overflow: hidden; }
-    #site-logo a img {
-      position: absolute;
-      display: block;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      -o-object-fit: contain;
-         object-fit: contain;
-      -o-object-position: right center;
-         object-position: right center;
-      -webkit-transition: opacity .2s;
-      transition: opacity .2s; }
-      #site-logo a img.light {
-        opacity: 0; }
-      #header.text-color-light #site-logo a img.dark {
-        opacity: 0; }
-      #header.text-color-light #site-logo a img.light {
-        opacity: 1; }
-      @media (min-width: 768px) {
-        #site-logo a img {
-          -o-object-position: left center;
-             object-position: left center; } }
+    -o-object-fit: contain;
+       object-fit: contain;
+    -o-object-position: right center;
+       object-position: right center;
+    -webkit-transition: opacity .2s;
+    transition: opacity .2s; }
+    #site-logo a img.light {
+      opacity: 0; }
+    #header.text-color-light #site-logo a img.dark {
+      opacity: 0; }
+    #header.text-color-light #site-logo a img.light {
+      opacity: 1; }
+    @media (min-width: 768px) {
+      #site-logo a img {
+        -o-object-position: left center;
+           object-position: left center; } }
 
 #site-title {
   position: absolute;
@@ -24530,25 +24523,19 @@ body {
             flex: 1 1 auto; } }
 
 #site-footer-logo {
-  max-width: 200px; }
-  #site-footer-logo a {
+  height: 140px;
+  position: relative; }
+  #site-footer-logo a img {
+    position: absolute;
     display: block;
-    position: relative;
-    width: 100%;
-    padding-top: 68.75%;
-    height: 0;
-    overflow: hidden; }
-    #site-footer-logo a img {
-      position: absolute;
-      display: block;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      -o-object-fit: contain;
-         object-fit: contain;
-      -o-object-position: left center;
-         object-position: left center; }
+    left: 0;
+    top: 0;
+    max-width: 100%;
+    height: 100%;
+    -o-object-fit: contain;
+       object-fit: contain;
+    -o-object-position: left center;
+       object-position: left center; }
 
 /*	Host Logos
 ---------------------------------------------------------*/
