--- a/wp-content/themes/norcal-sbdc/assets/src/scss/site/_footer.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/site/_footer.scss
@@ -141,26 +141,15 @@ body {
 }
 
 #site-footer-logo {
-	max-width: 200px;
-	// max-width: 150px;
+	height: 140px;
+	position: relative;
 	a {
-		display: block;
-		position: relative;
-		width: 100%;
-		// padding-top: 40%;
-		padding-top: percentage(275 / 400);
-		height: 0;
-		overflow: hidden;
-		// background-image: url(../img/logos/sbdc-california-450w.png);
-		// background-repeat: no-repeat;
-		// background-size: contain;
-		// background-position: left center;
 		img {
 			position: absolute;
 			display: block;
 			left: 0;
 			top: 0;
-			width: 100%;
+			max-width: 100%;
 			height: 100%;
 			object-fit: contain;
 			object-position: left center;
