--- a/wp-content/themes/norcal-sbdc/assets/src/scss/site/_header.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/site/_header.scss
@@ -286,19 +286,19 @@
 }
 #site-logo {
 	// width: 120px;
-	width: 80px;
+	width: 100%;
 	height: 48px;
 	display: flex;
 	align-items: center;
 	transition: opacity .2s, visibility 0s, transform .2s ease-out;
+	position: relative;
+
 	@include media-breakpoint-up(md) {
 		// width: 150px;
-		width: 100px;
 		height: 60px;
 	}
 	@include media-breakpoint-up(lg) {
 		// width: 225px;
-		width: 150px;
 		height: 90px;
 	}
 	#header.is-sticky & {
@@ -308,21 +308,12 @@
 		transition: opacity .2s, visibility 0s .2s, transform .2s ease-out;
 	}
 	a {
-		display: block;
-		position: relative;
-		width: 100%;
-		height: 100%;
-		overflow: hidden;
-		// background-image: url(../img/logos/sbdc-california-450w.png);
-		// background-repeat: no-repeat;
-		// background-size: contain;
-		// background-position: left center;
 		img {
 			position: absolute;
 			display: block;
 			left: 0;
 			top: 0;
-			width: 100%;
+			max-width: 100%;
 			height: 100%;
 			object-fit: contain;
 			object-position: right center;
